# rosetta-moe

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/: README.md  go.json  julia.json  python.json  run_all.sh  rust.json
benchmarks/convergence/: go.json  julia.json  python.json  rust.json
benchmarks/go/: go.mod  ops.go  ops_test.go
benchmarks/python/: bench_ops.py
crates/python/: README.md  pyproject.toml
crates/python/cuda/: __init__.py  bindings.py
crates/python/tests/: test_train.py
cuda/: README.md  stub.c
docs/: 00-index.md  2-learn.md  analysis-parallel-training.md  bench-results.md  convergence-revision-history.md  spec.md
docs-en/: 00-index.md  1-model.md  2-learn.md
docs-jp/: 00-index.md  1-model.md  2-learn.md
go/: README.md  attention.go  bench_output.json  bench_output_raw.json  bench_raw.txt  bench_test.go  config.go  generate.go  go.mod  layers.go  model.go  moe.go  nn_test.go  sgemm.go  tensor.go  train.go
julia/: Manifest.toml  MoETransformer.jl  Project.toml  README.md  attention.jl  bench.jl  bench_output.json  bench_output_after.json  bench_output_zero_alloc.json  config.jl  generate.jl  layers.jl  model.jl  moe.jl  tensor.jl  train.jl
python/: README.md  __init__.py  attention.py  bench.py  bench_output.json  config.py  generate.py  layers.py  model.py  moe.py  pyproject.toml  tensor.py  train.py
rust/: Cargo.toml  README.md  bench_output.json
scripts/: check_docs.py  convergence_julia.jl  convergence_plots.py  convergence_python.py  summary.py
(+101 files in other folders)
